--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -1,15 +1,9 @@
-name: CI Template
+name: CI Pipeline
 
 on:
   workflow_call:
     inputs:
-      image_name:
-        required: true
-        type: string
-      image_tag:
-        required: true
-        type: string
-      environment:
+      CI_ENVIRONMENT_NAME:
         required: true
         type: string
     secrets:
@@ -17,122 +11,128 @@ on:
         required: true
       DOCKER_PASSWORD:
         required: true
-      GH_PAT:
+      ARGOCD_PASSWORD:
         required: true
       ARGOCD_SERVER:
         required: true
-      ARGO_PASSWORD:
+      WAYA_HELM_PAT:
         required: true
 
-env:
-  MAVEN_OPTS: -Xms256m -Xmx512m
-
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          cache: maven
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-m2-
-      - name: Lint Code with Maven Checkstyle
-        run: mvn checkstyle:check
-      - name: Upload coverage
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage
-          path: coverage/
-
-  test:
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - uses: actions/checkout@v3
-      - name: Run Tests
-        run: mvn test
-      - name: Upload coverage
-        uses: actions/upload-artifact@v3
-        with:
-          name: coverage
-          path: coverage/
-
   docker_build:
     runs-on: ubuntu-latest
-    needs: test
+    outputs:
+      tag: ${{ steps.vars.outputs.tag }}
+      image_repo: ${{ steps.vars.outputs.image_repo }}
+      slug: ${{ steps.vars.outputs.slug }}
+
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Kaniko
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Set up build variables
+        id: vars
         run: |
-          mkdir -p /kaniko/.docker
-          echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"username\":\"${{ secrets.DOCKER_USERNAME }}\",\"password\":\"${{ secrets.DOCKER_PASSWORD }}\"}}}" > /kaniko/.docker/config.json
+          REPO_NAME="${{ github.event.repository.name }}"
+          BRANCH_NAME="${{ github.ref_name }}"
+          FULL_IMAGE_NAME="${{ secrets.DOCKER_USERNAME }}/microservice"
+          SHORT_SHA=$(git rev-parse --short HEAD)
+          TAG="${REPO_NAME}-${BRANCH_NAME}-${SHORT_SHA}"
+
+          REPO_SLUG=$(echo "$REPO_NAME" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9-]/-/g')
+          REPO_SLUG=${REPO_SLUG#wayappay-chat-2.0-}
+
+          echo "REPO_NAME=${REPO_NAME}" >> $GITHUB_ENV
+          echo "REPO_SLUG=${REPO_SLUG}" >> $GITHUB_ENV
+          echo "BRANCH_NAME=${BRANCH_NAME}" >> $GITHUB_ENV
+          echo "FULL_IMAGE_NAME=${FULL_IMAGE_NAME}" >> $GITHUB_ENV
+          echo "TAG=${TAG}" >> $GITHUB_ENV
+
+          echo "tag=${TAG}" >> $GITHUB_OUTPUT
+          echo "slug=${REPO_SLUG}" >> $GITHUB_OUTPUT 
+
+
+      - name: Log in to DockerHub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
       - name: Build and push Docker image
         run: |
-          /kaniko/executor \
-            --context "${{ github.workspace }}" \
-            --dockerfile "${{ github.workspace }}/Dockerfile" \
-            --destination "${{ inputs.image_name }}:${{ inputs.image_tag }}-${{ github.sha }}" \
-            --destination "${{ inputs.image_name }}:${{ inputs.image_tag }}-latest"
+          docker build -t ${{ env.FULL_IMAGE_NAME }}:${{ env.TAG }} .
+          docker push ${{ env.FULL_IMAGE_NAME }}:${{ env.TAG }}
 
   helm_update:
     runs-on: ubuntu-latest
     needs: docker_build
+    env:
+      CI_ENVIRONMENT_NAME: ${{ inputs.CI_ENVIRONMENT_NAME }}
+      REPO_SLUG: ${{ needs.docker_build.outputs.slug }}
+      TAG: ${{ needs.docker_build.outputs.tag }}
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      GITHUB_PAT: ${{ secrets.WAYA_HELM_PAT }}
+
     steps:
-      - name: Install dependencies
+      - name: Checkout this repo
+        uses: actions/checkout@v3
+
+      - name: Clone waya-helm-charts repo and update values
         run: |
-          sudo apt-get update
-          sudo apt-get install -y git yq
-      - name: Clone Helm charts repository
-        run: git clone https://${{ secrets.GH_PAT }}@github.com/WAYA-MULTI-LINK/waya-helm-charts.git
-      - name: Update values file
-        run: |
+          git clone https://kayodewaya:${GITHUB_PAT}@github.com/WAYA-MULTI-LINK/waya-helm-charts.git
           cd waya-helm-charts
-          git checkout main
-          git pull origin main
-          FILE_PATH="./microservices/${{ github.event.repository.name }}/${{ inputs.environment }}-values.yaml"
-          if [ -f "$FILE_PATH" ]; then
-            yq e -i ".application.image.repository = \"${{ inputs.image_name }}:${{ inputs.image_tag }}-${{ github.sha }}\"" "$FILE_PATH"
-            git config --global user.name "CI Bot"
-            git config --global user.email "ci-bot@alerzo.com"
-            git add "$FILE_PATH"
-            git commit -m "Update Docker image tag to ${{ inputs.image_name }}:${{ inputs.image_tag }}-${{ github.sha }}"
-            git push https://${{ secrets.GH_PAT }}@github.com/WAYA-MULTI-LINK/waya-helm-charts.git HEAD:main
-          else
-            echo "File does not exist: $FILE_PATH"
+
+          FULL_IMAGE_WITH_TAG="${DOCKER_USERNAME}/microservice:${TAG}"
+          FILE_PATH="./helm/microservices/${REPO_SLUG}/${CI_ENVIRONMENT_NAME}-values.yaml"
+          echo "Updating $FILE_PATH with new image.repository: ${FULL_IMAGE_WITH_TAG}"
+
+          if [ -z "${FULL_IMAGE_WITH_TAG}" ]; then
+            echo "FULL_IMAGE_WITH_TAG is empty. Failing the job."
             exit 1
           fi
 
+          if [ ! -s "$FILE_PATH" ]; then
+            echo "YAML file not found or is empty: $FILE_PATH"
+            exit 1
+          fi
+
+          yq eval -i ".image.repository = \"${FULL_IMAGE_WITH_TAG}\"" "$FILE_PATH"
+
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "github-actions"
+
+          git add "$FILE_PATH"
+          git commit -m "chore: update image.repository to ${FULL_IMAGE_WITH_TAG}" || echo "No changes to commit"
+          git push origin main
+
+
   argocd_sync:
     runs-on: ubuntu-latest
-    needs: helm_update
+    needs: [docker_build]
+    # env:
+    #   CI_ENVIRONMENT_NAME: ${{ inputs.CI_ENVIRONMENT_NAME }}
+    #   REPO_SLUG: ${{ needs.docker_build.outputs.slug }}
+    #   ARGOCD_SERVER: ${{ secrets.ARGOCD_SERVER }}
+    #   ARGOCD_USERNAME: ${{ secrets.ARGOCD_USERNAME }}
+    #   ARGOCD_PASSWORD: ${{ secrets.ARGOCD_PASSWORD }}
+    env:
+      CI_ENVIRONMENT_NAME: ${{ inputs.CI_ENVIRONMENT_NAME }}
+      REPO_SLUG: ${{ needs.docker_build.outputs.slug }}
+
     steps:
       - name: Install ArgoCD CLI
         run: |
-          curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
-          chmod +x argocd
-          sudo mv argocd /usr/local/bin/
+          curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+          chmod +x /usr/local/bin/argocd
+
       - name: Login to ArgoCD
-        env:
-          ARGOCD_SERVER: ${{ secrets.ARGOCD_SERVER }}
-          ARGOCD_USERNAME: admin
-          ARGOCD_PASSWORD: ${{ secrets.ARGO_PASSWORD }}
+        run: argocd login argocd.dev.wayalinks.com --username admin --password WqUNi85pNUJ43A3q --grpc-web --insecure 
+
+      - name: Check if ArgoCD app exists
         run: |
-          argocd login "$ARGOCD_SERVER" \
-            --username "$ARGOCD_USERNAME" \
-            --password "$ARGOCD_PASSWORD" \
-            --grpc-web --insecure
-      - name: Sync application
-        run: |
-          TARGET_APP="${{ github.event.repository.name }}-${{ inputs.environment }}"
-          argocd app sync "$TARGET_APP" \
-            --server="${{ secrets.ARGOCD_SERVER }}" \
-            --grpc-web --insecure
+          echo "${REPO_SLUG}"
+          TARGET_APP="${REPO_SLUG}-${CI_ENVIRONMENT_NAME}"
+          echo "Checking ArgoCD app: $TARGET_APP"
+          if ! argocd app get "$TARGET_APP" > /dev/null 2>&1; then
+            echo "ERROR: ArgoCD app $TARGET_APP does not exist"
+            exit 1
+          fi
