--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -19,15 +19,56 @@ on:
         required: true
 
 jobs:
+  maven_build:
+    runs-on: ubuntu-latest
+    env:
+      MAVEN_OPTS: -Xms256m -Xmx512m
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+          cache: maven
+
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-m2-
+
+      - name: Build with Maven
+        run: mvn clean package -DskipTests
+
+      - name: Store Maven build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: maven-build
+          path: target/*.jar
+
   docker_build:
     runs-on: ubuntu-latest
+    needs: [maven_build]
     outputs:
       tag: ${{ steps.vars.outputs.tag }}
       image_repo: ${{ steps.vars.outputs.image_repo }}
       slug: ${{ steps.vars.outputs.slug }}
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        
+      - name: Download Maven build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: maven-build
+          path: target
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
