--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
       CI_ENVIRONMENT_NAME:
         required: true
         type: string
+
+      RUNNER_LABEL:
+        required: true
+        type: string
     secrets:
       DOCKER_USERNAME:
         required: true
@@ -20,7 +24,10 @@ on:
 
 jobs:
   maven_build:
-    runs-on: ubuntu-latest
+    runs-on: 
+      - self-hosted
+      - ${{ inputs.RUNNER_LABEL }}
+      # - ${{ inputs.RUNNER_LABEL || 'ubuntu-latest' }}
     env:
       MAVEN_OPTS: -Xms256m -Xmx512m
     
@@ -53,7 +60,9 @@ jobs:
           path: target/*.jar
 
   docker_build:
-    runs-on: ubuntu-latest
+    runs-on: 
+      - self-hosted
+      - ${{ inputs.RUNNER_LABEL }}
     needs: [maven_build]
     outputs:
       tag: ${{ steps.vars.outputs.tag }}
@@ -104,7 +113,9 @@ jobs:
           docker push ${{ env.FULL_IMAGE_NAME }}:${{ env.TAG }}
 
   helm_update:
-    runs-on: ubuntu-latest
+    runs-on: 
+      - self-hosted
+      - ${{ inputs.RUNNER_LABEL }}
     needs: docker_build
     env:
       CI_ENVIRONMENT_NAME: ${{ inputs.CI_ENVIRONMENT_NAME }}
@@ -147,7 +158,9 @@ jobs:
 
 
   argocd_sync:
-    runs-on: ubuntu-latest
+    runs-on: 
+      - self-hosted
+      - ${{ inputs.RUNNER_LABEL }}
     needs: [docker_build]
     # env:
     #   CI_ENVIRONMENT_NAME: ${{ inputs.CI_ENVIRONMENT_NAME }}
