--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,11 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
           cache: maven
+          
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v4.5
+        with:
+          maven-version: 3.9.5
 
       - name: Cache Maven packages
         uses: actions/cache@v3
