--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - ${{ inputs.RUNNER_LABEL }}
       # - ${{ inputs.RUNNER_LABEL || 'ubuntu-latest' }}
     env:
-      MAVEN_OPTS: -Xms256m -Xmx512m
+      MAVEN_OPTS: "-Xms512m -Xmx1024m -XX:+UseParallelGC -XX:ParallelGCThreads=4 -Dmaven.compiler.thread-count=4"
     
     steps:
       - name: Checkout repository
@@ -50,13 +50,29 @@ jobs:
       - name: Cache Maven packages
         uses: actions/cache@v3
         with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          path: |
+            ~/.m2/repository
+            !~/.m2/repository/com/waya
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}-${{ hashFiles('**/*.java', '**/*.properties') }}
           restore-keys: |
-            ${{ runner.os }}-m2-
+            ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}-
+            ${{ runner.os }}-maven-
 
       - name: Build with Maven
-        run: mvn clean package -DskipTests
+        run: |
+          # Check for offline build capability
+          if [ -d ~/.m2/repository ]; then
+            echo "Maven repository exists, trying offline build first"
+            mvn -T 4 -B -o clean package -DskipTests -Dmaven.test.skip=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn || MVN_OFFLINE_FAILED=true
+          else
+            MVN_OFFLINE_FAILED=true
+          fi
+          
+          # If offline build failed, try online
+          if [ "$MVN_OFFLINE_FAILED" = "true" ]; then
+            echo "Running online build"
+            mvn -T 4 -B clean package -DskipTests -Dmaven.test.skip=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+          fi
 
       - name: Store Maven build artifacts
         uses: actions/upload-artifact@v4
