--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,8 @@ jobs:
     runs-on: 
       - self-hosted
       - ${{ inputs.RUNNER_LABEL }}
-      # - ${{ inputs.RUNNER_LABEL || 'ubuntu-latest' }}
     env:
-      MAVEN_OPTS: "-Xmx1024m"
+      MAVEN_OPTS: "-Xmx2048m"
     
     steps:
       - name: Checkout repository
@@ -40,7 +39,6 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-          cache: maven
           
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4.5
@@ -50,18 +48,15 @@ jobs:
       - name: Cache Maven packages
         uses: actions/cache@v3
         with:
-          path: ~/.m2/repository
+          path: ~/.m2
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-            ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}-
             ${{ runner.os }}-maven-
 
       - name: Build with Maven
         run: |
           java -version
-          mvn clean
           mvn clean package -DskipTests
-          echo 'Build with Maven'
 
       - name: Store Maven build artifacts
         uses: actions/upload-artifact@v4
